--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -74,3 +74,8 @@
   text-decoration: none;
   font-weight: bold;
 }
+.login-container{
+    max-width: 400px;
+    margin: auto;
+    padding: 20px;
+}
